@@ -7,11 +7,6 @@ from nodes import *
 
 import datetime
 
-try:
-    set
-except NameError:
-    from sets import Set as set
-
 import sys, copy_reg, types
 
 class RepresenterError(YAMLError):
